# gptnotes

./: Cargo.toml  README.md
src/: content.rs  db.rs  main.rs  structs.rs
