[package]
name = "gptnotes"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.1.14"
dirs = "5.0.0"
reqwest = { version = "0.11.16", features = ["json"] }
scraper = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
